--- a/template/css/game.css
+++ b/template/css/game.css
@@ -17,7 +17,7 @@
   transform-style: preserve-3d;
 }
 
-.card:hover {
+.reveal-card {
   transform: rotateY(180deg);
 }
 
@@ -32,7 +32,6 @@
 }
 
 .front {
-  background: url(../imgs/beth.png);
   transform: rotateY(180deg);
 }
 
