--- a/template/css/game.css
+++ b/template/css/game.css
@@ -1,20 +1,47 @@
+main {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  padding: 24px 0px;
+  padding-bottom: 40px;
+  background-image: url('../imgs/bg.jpg');
+  background-size: cover;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 800px;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  padding: 30px; 
+  margin-bottom: 24px;
+  border-radius: 5px;
+  font-size: 1.2em;
+}
+
 .grid {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 16px;
-  max-width: 800px;
+  max-width: 860px;
   width: 100%;
-  margin: 100px auto;
+  margin: 0px auto;
 }
 
 .card {
   aspect-ratio: 3/4;
   width: 100%;
-  background: #333;
   border-radius: 5px;
   position: relative;
   transition: all 400ms ease;
   transform-style: preserve-3d;
+  background: #ccc;
+
 }
 
 .reveal-card {
@@ -27,8 +54,9 @@
   position: absolute;
   background-size: cover !important;
   background-position: center !important;
-  border: 2px solid #39813a;
   border-radius: 5px;
+  transition: all 400ms ease;
+
 }
 
 .front {
@@ -38,4 +66,9 @@
 .back {
   background: url(../imgs/back.png);
   backface-visibility: hidden;
+}
+
+.disable-card {
+  filter: saturate(0);
+  opacity: 0.5;
 }
