Criando script do score

--- a/template/pages/game.html
+++ b/template/pages/game.html
@@ -19,8 +19,12 @@
         <span class="player"></span>
         <span>Tempo: <span class="timer">00</span></span>
       </header>
-
       <div class="grid"></div>
+      <form action="score.php" method="post">
+        <input type="text" name="name" value="Rodrigo" />
+        <input type="text" name="time" value="10" />
+        <input type="submit" value="Enviar" />
+      </form>
     </main>
   </body>
 </html>
