--- a/template/css/game.css
+++ b/template/css/game.css
@@ -7,7 +7,7 @@ main {
   justify-content: center;
   padding: 24px 0px;
   padding-bottom: 40px;
-  background-image: url('../imgs/bg.jpg');
+  background-image: url("../imgs/bg.jpg");
   background-size: cover;
 }
 
@@ -18,7 +18,7 @@ header {
   max-width: 800px;
   width: 100%;
   background: rgba(255, 255, 255, 0.8);
-  padding: 30px; 
+  padding: 30px;
   margin-bottom: 24px;
   border-radius: 5px;
   font-size: 1.2em;
@@ -41,7 +41,6 @@ header {
   transition: all 400ms ease;
   transform-style: preserve-3d;
   background: #ccc;
-
 }
 
 .reveal-card {
@@ -56,7 +55,6 @@ header {
   background-position: center !important;
   border-radius: 5px;
   transition: all 400ms ease;
-
 }
 
 .front {
@@ -71,4 +69,34 @@ header {
 .disable-card {
   filter: saturate(0);
   opacity: 0.5;
+}
+
+.cadastrar-tempo {
+  /* position: absolute; */
+  background: red;
+  padding: 50px;
+  width: 800px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1050;
+  /* display: none; */
+  width: 100%;
+  /* height: 100%; */
+  overflow: hidden;
+  outline: 0;
+  text-align: center;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: block;
+  margin: 0 auto;
+  /* margin-left: 20px; */
+}
+
+@media screen and (max-height: 1030px) {
+  main {
+    padding: 0px;
+  }
 }
